--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -52,6 +52,8 @@ source_set("lib") {
     "chunked_trace_reader.h",
     "clock_tracker.cc",
     "clock_tracker.h",
+    "counter_values_table.cc",
+    "counter_values_table.h",
     "counters_table.cc",
     "counters_table.h",
     "event_tracker.cc",
@@ -176,7 +178,6 @@ source_set("unittests") {
   testonly = true
   sources = [
     "clock_tracker_unittest.cc",
-    "counters_table_unittest.cc",
     "event_tracker_unittest.cc",
     "filtered_row_index_unittest.cc",
     "ftrace_utils_unittest.cc",
