--- a/gn/standalone/proto_library.gni
+++ b/gn/standalone/proto_library.gni
@@ -163,8 +163,8 @@ template("proto_library") {
       }
     }
 
-    if (defined(invoker.deps)) {
-      deps += invoker.deps
+    if (defined(invoker.proto_deps)) {
+      deps += invoker.proto_deps
     }
   }  # action "${target_name}_gen"
 
@@ -208,8 +208,8 @@ template("proto_library") {
     }
 
     deps += [ ":$action_name" ]
-    if (defined(invoker.deps)) {
-      deps += invoker.deps
+    if (defined(invoker.link_deps)) {
+      deps += invoker.link_deps
     }
   }  # source_set(target_name)
 }  # template
