--- a/.travis.yml
+++ b/.travis.yml
@@ -155,9 +155,9 @@ script:
   - tools/gn gen out/dist --args="${GN_ARGS}" --check
   - |
     if [[ "$CFG" == ui-* ]]; then
-      tools/ninja -C out/dist -j8 ui 2>&1 | grep -v "no version information available"
+      tools/ninja -C out/dist ui 2>&1 | grep -v "no version information"
     else
-      tools/ninja -C out/dist -j8
+      tools/ninja -C out/dist
     fi
   - |
     TEST_TARGETS="
@@ -181,10 +181,9 @@ script:
       tools/diff_test_trace_processor.py out/dist/trace_processor_shell
       if [[ "$CFG" == *-libfuzzer ]]; then
         # Run a single iteration each to make sure they are not crashing.
-        out/dist/end_to_end_shared_memory_fuzzer -runs=1
-        out/dist/buffered_frame_deserializer_fuzzer -runs=1
-        out/dist/unwinding_fuzzer -runs=1
-        out/dist/trace_processor_fuzzer -runs=1
+        for fuzzer in $(find out/dist -name '*_fuzzer' -executable); do
+          $fuzzer -runs=1
+        done
       fi
     fi
 
