--- a/include/perfetto/protozero/BUILD.gn
+++ b/include/perfetto/protozero/BUILD.gn
@@ -18,6 +18,7 @@ source_set("protozero") {
   ]
   sources = [
     "contiguous_memory_range.h",
+    "field.h",
     "message.h",
     "message_handle.h",
     "proto_decoder.h",
