--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -128,6 +128,8 @@ source_set("lib") {
     "../../protos/perfetto/trace:lite",
     "../../protos/perfetto/trace/ftrace:lite",
     "../../protos/perfetto/trace_processor:lite",
+    # This one is new.
+    "../../protos/perfetto/trace:zero",
     "../base",
     "../protozero",
   ]
