--- a/src/profiling/memory/BUILD.gn
+++ b/src/profiling/memory/BUILD.gn
@@ -206,18 +206,22 @@ source_set("malloc_hooks") {
 }
 
 perfetto_fuzzer_test("unwinding_fuzzer") {
+  testonly = true
   sources = [
     "unwinding_fuzzer.cc",
   ]
   deps = [
     ":daemon",
+    ":ring_buffer",
     ":wire_protocol",
     "../../../gn:default_deps",
     "../../../src/base",
+    "../../base:test_support",
   ]
 }
 
 perfetto_fuzzer_test("shared_ring_buffer_fuzzer") {
+  testonly = true
   sources = [
     "shared_ring_buffer_fuzzer.cc",
   ]
