[Patchset 1] [WIP] Implement trace sorting for json traces.
- Introduces TraceParser interface, now implemented by Json and Proto Trace
  Parser.
- TraceSorter now takes TraceToken instead of TraceBlobView.
  TraceToken is a tagged union of TraceBlobView and Json::Value.
- The tokenization part of preview json_parser is extracted to json_trace_tokenizer.
- For json tracing, the sorting window size is max int.
- Json traces can have events with timestamp 0 (all metadata events). Therefore
  in trace sorter, we now dcheck sort_mid_ts_ >= 0 instead of strictly > 0. This
  is also another reason why window size is max int for json traces. Otherwise
  we trigger lots of unneccessary sorting.

Change-Id: I5e9e1eaede8bcc3091df52e1a58d5fcd13542112

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -108,6 +108,7 @@ source_set("lib") {
     "thread_table.cc",
     "thread_table.h",
     "trace_blob_view.h",
+    "trace_parser.h",
     "trace_processor.cc",
     "trace_processor_context.cc",
     "trace_processor_context.h",
@@ -117,6 +118,8 @@ source_set("lib") {
     "trace_sorter.h",
     "trace_storage.cc",
     "trace_storage.h",
+    "trace_token.cc",
+    "trace_token.h",
     "virtual_destructors.cc",
     "window_operator_table.cc",
     "window_operator_table.h",
@@ -138,6 +141,10 @@ source_set("lib") {
     sources += [
       "json_trace_parser.cc",
       "json_trace_parser.h",
+      "json_trace_tokenizer.cc",
+      "json_trace_tokenizer.h",
+      "json_trace_utils.cc",
+      "json_trace_utils.h",
     ]
     deps += [ "../../gn:jsoncpp_deps" ]
   }
