--- a/protos/perfetto/common/BUILD.gn
+++ b/protos/perfetto/common/BUILD.gn
@@ -17,6 +17,7 @@ import("../../../gn/proto_library.gni")
 import("../../../gn/protozero_library.gni")
 
 common_sources = [
+  "activate_triggers_request.proto",
   "commit_data_request.proto",
   "android_log_constants.proto",
   "sys_stats_counters.proto",
