[Patchset 1] Add the ability to use the START_TRACE trigger mode.
This enables Perfetto to defer the start of a trace until a trigger is
received, but the trace will be configured and ready to go when
requested.

DO NOT SUBMIT: Still need to add tests.

Change-Id: I4cfd2c64f46e54ec76a3200ab304e817d456ee0f

--- a/src/tracing/BUILD.gn
+++ b/src/tracing/BUILD.gn
@@ -32,6 +32,7 @@ source_set("tracing") {
     "../protozero",
   ]
   sources = [
+    "core/activate_triggers_request.cc",
     "core/android_log_config.cc",
     "core/android_power_config.cc",
     "core/chrome_config.cc",
