[Patchset 1] Fix unwinding with NO_DEXFILE_SUPPORT.
The header Unwinder.h would be different between the libunwindstack
compilation unit and the unwinding.cc compilation unit. This would lead
to inconsistent layout of the members, and thus resolve_names_ being set
to false by accident, among other things.

Change-Id: Ic5262e6f578665b9e2f96e3350647ddec3ad4eeb

--- a/src/profiling/memory/BUILD.gn
+++ b/src/profiling/memory/BUILD.gn
@@ -103,6 +103,7 @@ source_set("daemon") {
     "../../../protos/perfetto/trace:zero",
     "../../../protos/perfetto/trace/profiling:zero",
   ]
+  defines = [ "NO_LIBDEXFILE_SUPPORT" ]
   sources = [
     "bookkeeping.cc",
     "bookkeeping.h",
