[Patchset 1] trace_processor: implement string pooling
Change-Id: Id1ede4e626b0ec65041be7177a08d3b1fcdbdbbc

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -103,6 +103,8 @@ source_set("lib") {
     "storage_schema.h",
     "storage_table.cc",
     "storage_table.h",
+    "string_pool.cc",
+    "string_pool.h",
     "string_table.cc",
     "string_table.h",
     "table.cc",
