--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -128,6 +128,9 @@ source_set("lib") {
     "../../gn:default_deps",
     "../../include/perfetto/traced:sys_stats_counters",
     "../../protos/perfetto/trace:lite",
+
+    # This one is new.
+    "../../protos/perfetto/trace:zero",
     "../../protos/perfetto/trace/ftrace:lite",
     "../../protos/perfetto/trace_processor:lite",
     "../base",
