[Patchset 1] trace_processor: json_cpp -> sajson
Replace json_cpp with sajson. This increases the speed of importing a
json trace from 28 MB/s to 90 MB/s.

$ out/r/trace_processor_shell_sajson buildtools/test_data/sfgate.json
trace_processor_shell.cc Trace loaded: 8.34 MB (89.6 MB/s)

$ out/r/trace_processor_shell buildtools/test_data/sfgate.json
trace_processor_shell.cc Trace loaded: 8.34 MB (27.8 MB/s)

Change-Id: Ifde4b5f1d2d41376923f6bc3951e5e20f9e84fde

--- a/buildtools/BUILD.gn
+++ b/buildtools/BUILD.gn
@@ -757,6 +757,23 @@ source_set("jsoncpp") {
   public_configs = [ ":jsoncpp_config" ]
 }
 
+config("sajson_config") {
+  cflags = [
+    # Using -isystem instead of include_dirs (-I), so we don't need to suppress
+    # warnings coming from third-party headers. Doing so would mask warnings in
+    # our own code.
+    "-isystem",
+    rebase_path("sajson/include", root_build_dir),
+  ]
+}
+
+source_set("sajson") {
+  sources = [
+    "sajson/include/sajson.h",
+  ]
+  public_configs = [ ":sajson_config" ]
+}
+
 config("linenoise_config") {
   cflags = [
     # Using -isystem instead of include_dirs (-I), so we don't need to suppress
