[Patchset 1] Give heapprofd dac_read_search on userdebug.
This is needed because some oat dex files are generated without world
readable permissions. See the bug for details.

We are still constrained by SELinux rules.

Bug: 129048073
Change-Id: I0299c23e70bad266c98ebe8402f522e21ffbc55f

--- a/heapprofd.rc
+++ b/heapprofd.rc
@@ -19,7 +19,8 @@ service heapprofd /system/bin/heapprofd
     group nobody readproc
     writepid /dev/cpuset/system-background/tasks
     onrestart exec_background - nobody shell -- /system/bin/heapprofd --cleanup-after-crash
-    capabilities KILL
+    # DAC_READ_SEARCH is denied by SELinux on user builds.
+    capabilities KILL DAC_READ_SEARCH
 
 on property:persist.heapprofd.enable=1
     start heapprofd
