[Patchset 1] Add the ability for the command line client to activate triggers.
Also add end to end tests for this behaviour and ensure it works for
both START_TRACING, STOP_TRACING. In addition make it so that empty traces
(no triggers reached) do not create files.

Bug: 128966650
Change-Id: I8f1c6b12b76a767b394e195829b129ed6a2ee707

--- a/src/perfetto_cmd/BUILD.gn
+++ b/src/perfetto_cmd/BUILD.gn
@@ -26,9 +26,11 @@ source_set("perfetto_cmd") {
     "../../protos/perfetto/config:lite",
     "../base",
     "../protozero",
-    "../tracing:ipc_consumer",
+    "../tracing:ipc",
   ]
   sources = [
+    "activate_triggers.cc",
+    "activate_triggers.h",
     "config.cc",
     "config.h",
     "pbtxt_to_pb.cc",
@@ -36,6 +38,7 @@ source_set("perfetto_cmd") {
     "perfetto_cmd.cc",
     "perfetto_cmd.h",
     "perfetto_config.descriptor.h",
+    "platform_task_runner.h",
     "rate_limiter.cc",
     "rate_limiter.h",
   ]
