--- a/gn/perfetto.gni
+++ b/gn/perfetto.gni
@@ -84,7 +84,7 @@ perfetto_build_standalone =
 if (perfetto_build_standalone || perfetto_build_with_android) {
   perfetto_root_path = "//"
 } else if (!defined(perfetto_root_path)) {
-  perfetto_root_path = "//third_party/perfetto/"
+  perfetto_root_path = "//third_party/perfetto"
 }
 
 # If we're building in the Android tree, we expect that the testing infra
