--- a/gn/protozero_library.gni
+++ b/gn/protozero_library.gni
@@ -25,13 +25,13 @@ template("protozero_library") {
 
     generate_cc = false
     generate_python = false
-    generator_plugin_label = perfetto_root_path + "src/protozero/protoc_plugin"
+    generator_plugin_label = "$perfetto_root_path/src/protozero/protoc_plugin"
     generator_plugin_suffix = ".pbzero"
     if (build_with_chromium) {
       component_build_force_source_set = true
     }
 
-    link_deps = [ perfetto_root_path + "src/protozero" ]
+    link_deps = [ "$perfetto_root_path/src/protozero" ]
 
     if (defined(invoker.deps)) {
       link_deps += invoker.deps
