[Patchset 1] Adjust protobuf build rules to not use proto_out_dir
Targets were setting proto_out_dir = "$perfetto_root_path/...", but
Chromium's proto_library() does not allow absolute paths here. It was
still working out due to linux ignoring redundant slashes.

The desireable biproduct of this change is that all proto targets now
generate files under their target_gen_dir, which makes files within gen/
easier to track.

Also fixed a couple missing deps on proto targets.

Bug: 944928
Change-Id: I58f41b5f4123890cecbe2a0c1e05d38477e9e95f

--- a/gn/BUILD.gn
+++ b/gn/BUILD.gn
@@ -125,13 +125,7 @@ config("default_config") {
 # This config is propagated to embedders via libperfetto. It's also included in
 # the default_config above.
 config("public_config") {
-  include_dirs = [
-    "../include",
-
-    # The below are needed due to generated protobuf headers including other
-    # headers with a path relative to the perfetto root.
-    "${root_gen_dir}/${perfetto_root_path}/protos",
-  ]
+  include_dirs = [ "../include" ]
 
   defines = []
 
