--- a/protos/perfetto/trace/power/BUILD.gn
+++ b/protos/perfetto/trace/power/BUILD.gn
@@ -16,18 +16,20 @@ import("../../../../gn/perfetto.gni")
 import("../../../../gn/proto_library.gni")
 import("../../../../gn/protozero_library.gni")
 
-profiling_proto_names = [ "battery_counters.proto", "power_rails.proto" ]
+profiling_proto_names = [
+  "battery_counters.proto",
+  "power_rails.proto",
+]
 
 proto_library("lite") {
   generate_python = false
   sources = profiling_proto_names
   proto_in_dir = "$perfetto_root_path/protos"
-  proto_out_dir = "$perfetto_root_path/protos"
 }
 
 protozero_library("zero") {
   sources = profiling_proto_names
   proto_in_dir = "$perfetto_root_path/protos"
-  proto_out_dir = "$perfetto_root_path/protos"
+
   generator_plugin_options = "wrapper_namespace=pbzero"
 }
