[Patchset 1] Revert "proto: deserialize build dependency"
This reverts commit f828157dcf5efb891d6efeefdf94773aca9b82ca.

Reason for revert: suspected cause of build failures

We suspect that the change might be causing issues with proto linkage in chromium. For example [1] and crbug.com/944925.

[1] https://chromium-review.googlesource.com/c/chromium/src/+/1536602/4

Change-Id: Icca9b93ead160eba8da347f9a8ea51dbb2ba6836

--- a/gn/standalone/proto_library.gni
+++ b/gn/standalone/proto_library.gni
@@ -162,6 +162,10 @@ template("proto_library") {
         deps += [ plugin_host_label ]
       }
     }
+
+    if (defined(invoker.deps)) {
+      deps += invoker.deps
+    }
   }  # action "${target_name}_gen"
 
   # The source_set that builds the generated .pb.cc files.
@@ -204,8 +208,8 @@ template("proto_library") {
     }
 
     deps += [ ":$action_name" ]
-    if (defined(invoker.link_deps)) {
-      deps += invoker.link_deps
+    if (defined(invoker.deps)) {
+      deps += invoker.deps
     }
   }  # source_set(target_name)
 }  # template
