[Patchset 1] trace_processor: Improve support for syscalls
Syscall numbers are different on each platform.
This cl introduces SyscallTracker which maps the syscall numbers
onto the correct syscall for each platform. We use the SystemInfo
packet to work out which platform the trace is taken from.

Bug: 124099616
Change-Id: I0e829aa6fbea1a2d59c6af11879e82e372557181

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -105,6 +105,8 @@ source_set("lib") {
     "storage_table.h",
     "string_table.cc",
     "string_table.h",
+    "syscall_tracker.cc",
+    "syscall_tracker.h",
     "table.cc",
     "table.h",
     "thread_table.cc",
@@ -204,6 +206,7 @@ source_set("unittests") {
     "slice_tracker_unittest.cc",
     "span_join_operator_table_unittest.cc",
     "sqlite3_str_split_unittest.cc",
+    "syscall_tracker_unittest.cc",
     "thread_table_unittest.cc",
     "trace_processor_impl_unittest.cc",
     "trace_sorter_unittest.cc",
