[Patchset 1] Add parser for Fuchsia traces
Change-Id: Iefee09aaf68142a7ac00cd632dcf17f19175f5f8

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -64,6 +64,8 @@ source_set("lib") {
     "ftrace_descriptors.h",
     "ftrace_utils.cc",
     "ftrace_utils.h",
+    "fuchsia_trace_parser.cc",
+    "fuchsia_trace_parser.h",
     "instants_table.cc",
     "instants_table.h",
     "process_table.cc",
