[Patchset 1] Review access change
Change-Id: Iff6dedd6860bb731cc5ef981a7bacc8507af5cd3

--- a/project.config
+++ b/project.config
@@ -8,3 +8,4 @@
         submit = group approvers-platform-external-perfetto
 	label-Verified = -1..+1 group mdb/kokoro
 	label-Verified = -1..+1 group mdb/kokoro-dedicated
+	read = group mdb/copybara-git-readers
