[Patchset 1] trace_processor: introduce API for computing metrics on trace processor
This will be used by shell as well as internal targets to compute a
metric and write that metric into a merged proto.

Bug: 129747127
Change-Id: I82eb7b0c6fbbfb0f7626c021283f42ebfa8815f9

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -146,6 +146,9 @@ source_set("lib") {
     "../base",
     "../protozero",
 
+    # This is a legitimate lite dependency.
+    "../../protos/perfetto/metrics:lite",
+
     # TODO(primiano): remove this one dep and move to a ":zero" dep.
     "../../protos/perfetto/trace_processor:lite",
   ]
@@ -170,7 +173,6 @@ if (current_toolchain == host_toolchain) {
     deps = [
       ":lib",
       "../../gn:default_deps",
-      "../../protos/perfetto/metrics:lite",
       "../../protos/perfetto/trace_processor:lite",
       "../base",
     ]
