[Patchset 1] trigger_perfetto: Add trigger_perfetto binary
Add a new binary ("trigger_perfetto") to allow programs that cannot
exec "perfetto" to trigger the end of long running traces.

Clean up a new small unreleated things:

- Fix tools/tmux support for protobuf configs
- Add a new config "background.cfg" with a stop trigger for testing
- Improve two error logs in tracing_service_impl.cc

Bug: 130543265
Change-Id: I7fde613382e2bf3041ab50a96f0a300fe8699704

--- a/src/perfetto_cmd/BUILD.gn
+++ b/src/perfetto_cmd/BUILD.gn
@@ -38,6 +38,7 @@ source_set("perfetto_cmd") {
     "perfetto_config.descriptor.h",
     "rate_limiter.cc",
     "rate_limiter.h",
+    "trigger_perfetto.cc",
     "trigger_producer.cc",
     "trigger_producer.h",
   ]
