[Patchset 1] trace_processor: fix missing syscall headers in build files
Change-Id: Ib0e83d349367fd2f80b3d3e38c3912d3baca19e6

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -108,8 +108,12 @@ source_set("lib") {
     "string_pool.h",
     "string_table.cc",
     "string_table.h",
+    "syscall_aarch32.h",
+    "syscall_aarch64.h",
+    "syscall_armeabi.h",
     "syscall_tracker.cc",
     "syscall_tracker.h",
+    "syscall_x86_64.h",
     "table.cc",
     "table.h",
     "thread_table.cc",
