[Patchset 1] Add ProfilePacket support to trace processor.
Change-Id: I8b1fbe93c34b3fef7767898b455345cbb053e8d6

--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -64,6 +64,8 @@ source_set("lib") {
     "ftrace_descriptors.h",
     "ftrace_utils.cc",
     "ftrace_utils.h",
+    "heap_profile_tracker.cc",
+    "heap_profile_tracker.h",
     "instants_table.cc",
     "instants_table.h",
     "null_term_string_view.h",
@@ -205,6 +207,7 @@ source_set("unittests") {
     "event_tracker_unittest.cc",
     "filtered_row_index_unittest.cc",
     "ftrace_utils_unittest.cc",
+    "heap_profile_tracker_unittest.cc",
     "null_term_string_view_unittest.cc",
     "process_table_unittest.cc",
     "process_tracker_unittest.cc",
