--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -139,8 +139,6 @@ source_set("lib") {
     "../../gn:default_deps",
     "../../include/perfetto/traced:sys_stats_counters",
     "../../protos/perfetto/common:zero",
-    "../../protos/perfetto/metrics:zero",
-    "../../protos/perfetto/metrics/android:zero",
     "../../protos/perfetto/trace:zero",
     "../../protos/perfetto/trace/android:zero",
     "../../protos/perfetto/trace/ftrace:zero",
@@ -150,7 +148,7 @@ source_set("lib") {
     "../../protos/perfetto/trace/sys_stats:zero",
     "../base",
     "../protozero",
-    "metrics:gen_merged_sql_metrics",
+    "metrics:lib",
   ]
   public_deps = [
     "../../include/perfetto/trace_processor",
