--- a/src/trace_processor/metrics/BUILD.gn
+++ b/src/trace_processor/metrics/BUILD.gn
@@ -32,3 +32,16 @@ action("gen_merged_sql_metrics") {
   ]
   public_configs = [ ":gen_config" ]
 }
+
+source_set("lib") {
+  sources = [
+    "metrics.cc",
+    "metrics.h",
+  ]
+  deps = [
+    ":gen_merged_sql_metrics",
+    "../../../gn:default_deps",
+    "../../../protos/perfetto/metrics:zero",
+    "../../../protos/perfetto/metrics/android:zero",
+  ]
+}
