--- a/src/trace_processor/metrics/sql_files.gni
+++ b/src/trace_processor/metrics/sql_files.gni
@@ -12,6 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-android_sql_files = [ "android/android_mem.sql" ]
+android_sql_files = [
+  "android/android_mem.sql",
+  "android/android_mem_lmk.sql",
+]
 
 sql_files = android_sql_files
