--- a/src/trace_processor/metrics/sql_files.gni
+++ b/src/trace_processor/metrics/sql_files.gni
@@ -15,6 +15,7 @@
 android_sql_files = [
   "android/android_mem.sql",
   "android/android_mem_lmk.sql",
+  "android/android_mem_proc_counters.sql",
 ]
 
 sql_files = android_sql_files
