--- a/src/perfetto_cmd/BUILD.gn
+++ b/src/perfetto_cmd/BUILD.gn
@@ -23,6 +23,7 @@ source_set("perfetto_cmd") {
   deps = [
     "../../buildtools:protobuf_lite",
     "../../gn:default_deps",
+    "../../protos/perfetto/common:lite",
     "../../protos/perfetto/config:lite",
     "../base",
     "../protozero",
@@ -55,7 +56,6 @@ proto_library("protos") {
   generate_python = false
   deps = []
   sources = [
-    "descriptor.proto",
     "perfetto_cmd_state.proto",
   ]
   proto_in_dir = perfetto_root_path
