--- a/src/trace_processor/BUILD.gn
+++ b/src/trace_processor/BUILD.gn
@@ -66,6 +66,7 @@ source_set("lib") {
     "ftrace_utils.h",
     "instants_table.cc",
     "instants_table.h",
+    "metrics.descriptor.h",
     "null_term_string_view.h",
     "process_table.cc",
     "process_table.h",
